--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "@geist-ui/react": "^2.1.3",
     "@types/styled-components": "^5.1.9",
     "inter-ui": "^3.15.1",
+    "naming-convention-transfer": "^1.0.2",
     "next": "^10.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.13.0",
     "styled-components": "^5.2.1"
   },
   "scripts": {
