--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "inter-ui": "^3.15.1",
     "naming-convention-transfer": "^1.0.2",
     "next": "^10.0.9",
+    "next-rosetta": "^1.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.13.0",
