--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "dependencies": {
+    "@ethersproject/providers": "^5.1.0",
     "@geist-ui/react": "^2.1.3",
     "@types/styled-components": "^5.1.9",
+    "@web3-react/abstract-connector": "^6.0.7",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/types": "^6.0.7",
+    "add": "^2.0.6",
     "inter-ui": "^3.15.1",
     "naming-convention-transfer": "^1.0.2",
     "next": "^10.0.9",
@@ -9,7 +15,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.13.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "dev": "next dev",
