--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/types": "^6.0.7",
     "add": "^2.0.6",
+    "echarts": "^5.0.2",
     "inter-ui": "^3.15.1",
     "naming-convention-transfer": "^1.0.2",
     "next": "^10.0.9",
