--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@ethersproject/providers": "^5.1.0",
     "@geist-ui/react": "^2.1.3",
+    "@types/echarts": "^4.9.6",
     "@types/styled-components": "^5.1.9",
     "@web3-react/abstract-connector": "^6.0.7",
     "@web3-react/core": "^6.1.9",
@@ -15,6 +16,7 @@
     "next-rosetta": "^1.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
     "react-query": "^3.13.0",
     "styled-components": "^5.2.1",
     "yarn": "^1.22.10"
