--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@ethersproject/providers": "^5.1.0",
     "@geist-ui/react": "^2.1.3",
+    "@geist-ui/react-icons": "^1.0.1",
     "@types/echarts": "^4.9.6",
     "@types/styled-components": "^5.1.9",
     "@web3-react/abstract-connector": "^6.0.7",
@@ -10,6 +11,7 @@
     "@web3-react/types": "^6.0.7",
     "add": "^2.0.6",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "echarts": "^5.0.2",
     "echarts-for-react": "^3.0.1",
     "inter-ui": "^3.15.1",
