feat: web3 context

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,11 @@
-ttiernode_modules
+node_modules
 .next
 yarn.lock
 package-lock.json
 public
+**/node_modules/*
+**/out/*
+**/.next/*
+env.config.js
+env.development.config.js
+next.config.js
