--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "@ethersproject/providers": "^5.1.0",
     "@geist-ui/react": "^2.1.3",
     "@geist-ui/react-icons": "^1.0.1",
+    "@polkadot/extension-dapp": "^0.37.3-17",
+    "@polkadot/extension-inject": "^0.37.3-17",
+    "@polkadot/util": "^6.3.1",
     "@types/echarts": "^4.9.6",
     "@types/styled-components": "^5.1.9",
     "@web3-react/abstract-connector": "^6.0.7",
@@ -16,7 +19,7 @@
     "echarts-for-react": "^3.0.1",
     "inter-ui": "^3.15.1",
     "naming-convention-transfer": "^1.0.2",
-    "next": "^10.0.9",
+    "next": "^10.2.0",
     "next-rosetta": "^1.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -46,6 +49,7 @@
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
