--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
     "@ethersproject/providers": "^5.1.0",
     "@geist-ui/react": "^2.1.3",
     "@geist-ui/react-icons": "^1.0.1",
+    "@polkadot/api": "^4.7.2",
+    "@polkadot/apps-config": "^0.89.1",
     "@polkadot/extension-dapp": "^0.37.3-17",
     "@polkadot/extension-inject": "^0.37.3-17",
+    "@polkadot/types": "^4.7.2",
     "@polkadot/util": "^6.3.1",
     "@types/echarts": "^4.9.6",
     "@types/styled-components": "^5.1.9",
@@ -14,7 +17,9 @@
     "@web3-react/types": "^6.0.7",
     "add": "^2.0.6",
     "axios": "^0.21.1",
+    "bn.js": "^5.2.0",
     "dayjs": "^1.10.4",
+    "decimal.js": "^10.2.1",
     "echarts": "^5.0.2",
     "echarts-for-react": "^3.0.1",
     "inter-ui": "^3.15.1",
