chore: migrate to gatsby

--- a/package.json
+++ b/package.json
@@ -18,26 +18,34 @@
     "@web3-react/types": "^6.0.7",
     "add": "^2.0.6",
     "axios": "^0.21.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "bn.js": "^5.2.0",
+    "buffer": "^6.0.3",
     "dayjs": "^1.10.4",
     "decimal.js": "^10.2.1",
     "echarts": "^5.0.2",
     "echarts-for-react": "^3.0.1",
+    "gatsby": "^3.4.0",
+    "gatsby-plugin-intl": "^0.3.3",
+    "gatsby-plugin-styled-components": "^4.4.0",
+    "gatsby-plugin-styled-jsx": "^4.4.0",
+    "install": "^0.13.0",
     "inter-ui": "^3.15.1",
     "naming-convention-transfer": "^1.0.2",
-    "next": "^10.2.0",
-    "next-rosetta": "^1.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-query": "^3.13.0",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.2.3",
+    "styled-jsx": "^3.4.4",
     "yarn": "^1.22.10"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "build": "gatsby build",
+    "dev": "gatsby develop",
+    "start": "yarn dev",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write .",
     "lint": "eslint . --ext ts --ext tsx --ext js"
@@ -57,7 +65,9 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.0",
+    "gatsby-plugin-root-import": "^2.0.6",
     "lint-staged": "^10.5.4",
+    "node-polyfill-webpack-plugin": "^1.1.0",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   }
