--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,7 @@
     }
   },
   "rules": {
-    "react/react-in-jsx-scope": 1,
+    "react/react-in-jsx-scope": "on",
     "react/display-name": 0,
     "react/prop-types": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
