--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.0",
     "gatsby-plugin-root-import": "^2.0.6",
+    "gatsby-plugin-typescript": "^3.4.0",
     "lint-staged": "^10.5.4",
     "node-polyfill-webpack-plugin": "^1.1.0",
     "prettier": "^2.2.1",
