fix: chart styles

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-GATSBY_BACKEND_ENDPOINT=http://127.0.0.1:3000
-GATSBY_POLKADOT_ENDPOINT=ws://127.0.0.1:9944
+GATSBY_BACKEND_ENDPOINT=https://crowdloan-api.phala.network
+GATSBY_POLKADOT_ENDPOINT=wss://crowdloan-api.phala.network/ws
