--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-query": "^3.13.0",
+    "react-use": "^17.2.4",
     "styled-components": "^5.2.3",
     "styled-jsx": "^3.4.4",
     "yarn": "^1.22.10"
