--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@polkadot/util": "^6.3.1",
     "@polkadot/util-crypto": "^6.3.1",
     "@types/echarts": "^4.9.6",
+    "@types/react-responsive": "^8.0.2",
     "@types/styled-components": "^5.1.9",
     "@web3-react/abstract-connector": "^6.0.7",
     "@web3-react/core": "^6.1.9",
@@ -38,6 +39,7 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-query": "^3.13.0",
+    "react-responsive": "^8.2.0",
     "react-use": "^17.2.4",
     "styled-components": "^5.2.3",
     "styled-jsx": "^3.4.4",
