--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 GATSBY_BACKEND_ENDPOINT=https://crowdloan-api.phala.network
 GATSBY_POLKADOT_ENDPOINT=wss://crowdloan-api.phala.network/ws
+WEBSITE_URL=https://crowdloan-staging.phala.works
