--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "install": "^0.13.0",
     "inter-ui": "^3.15.1",
     "naming-convention-transfer": "^1.0.2",
+    "query-string": "^7.0.0",
     "rc-input-number": "^7.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
