--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@polkadot/util": "^6.3.1",
     "@polkadot/util-crypto": "^6.3.1",
     "@types/echarts": "^4.9.6",
+    "@types/react-dom": "^17.0.5",
     "@types/react-responsive": "^8.0.2",
     "@types/styled-components": "^5.1.9",
     "@web3-react/abstract-connector": "^6.0.7",
