--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@polkadot/util-crypto": "^6.3.1",
     "@types/echarts": "^4.9.6",
     "@types/react-dom": "^17.0.5",
+    "@types/react-mailchimp-subscribe": "^2.1.0",
     "@types/react-responsive": "^8.0.2",
     "@types/styled-components": "^5.1.9",
     "@web3-react/abstract-connector": "^6.0.7",
@@ -40,6 +41,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-query": "^3.13.0",
     "react-responsive": "^8.2.0",
     "react-use": "^17.2.4",
