--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@polkadot/util-crypto": "^6.3.1",
     "@types/echarts": "^4.9.6",
     "@types/react-dom": "^17.0.5",
+    "@types/react-helmet": "^6.1.1",
     "@types/react-mailchimp-subscribe": "^2.1.0",
     "@types/react-responsive": "^8.0.2",
     "@types/styled-components": "^5.1.9",
@@ -31,6 +32,7 @@
     "echarts-for-react": "^3.0.1",
     "gatsby": "^3.4.0",
     "gatsby-plugin-intl": "^0.3.3",
+    "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-styled-components": "^4.4.0",
     "gatsby-plugin-styled-jsx": "^4.4.0",
     "install": "^0.13.0",
@@ -40,6 +42,7 @@
     "rc-input-number": "^7.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-is": "^17.0.2",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-query": "^3.13.0",
