--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
 GATSBY_BACKEND_ENDPOINT=https://crowdloan-api.phala.network
-GATSBY_POLKADOT_ENDPOINT=wss://crowdloan-api.phala.network/ws
+GATSBY_POLKADOT_ENDPOINT=wss://kusama-rpc.polkadot.io
