--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "echarts": "^5.0.2",
     "echarts-for-react": "^3.0.1",
     "gatsby": "^3.4.0",
+    "gatsby-plugin-google-gtag": "^3.6.0",
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-styled-components": "^4.4.0",
