--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@polkadot/types": "^4.7.2",
     "@polkadot/util": "^6.3.1",
     "@polkadot/util-crypto": "^6.3.1",
+    "@sentry/react": "^6.5.1",
+    "@sentry/tracing": "^6.5.1",
     "@types/echarts": "^4.9.6",
     "@types/react-dom": "^17.0.5",
     "@types/react-helmet": "^6.1.1",
