--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@polkadot/extension-dapp": "^0.37.3-17",
     "@polkadot/extension-inject": "^0.37.3-17",
     "@polkadot/types": "^4.7.2",
+    "@polkadot/ui-keyring": "^0.79.1",
     "@polkadot/util": "^6.3.1",
     "@polkadot/util-crypto": "^6.3.1",
     "@sentry/react": "^6.5.1",
