--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-GATSBY_BACKEND_ENDPOINT=https://crowdloan-api.phala.network
-GATSBY_POLKADOT_ENDPOINT=wss://kusama-rpc.polkadot.io
-GATSBY_CAMPAIGN_ID=1
+GATSBY_BACKEND_ENDPOINT=https://crowdloan-api-test.phala.network
+GATSBY_POLKADOT_ENDPOINT=wss://crowdloan-api-test.phala.network/ws
+GATSBY_CAMPAIGN_ID=2
