--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
     "@ethersproject/providers": "^5.1.0",
     "@geist-ui/react": "^2.1.3",
     "@geist-ui/react-icons": "^1.0.1",
-    "@polkadot/api": "^4.7.2",
+    "@polkadot/api": "^4.15.1",
     "@polkadot/apps-config": "^0.89.1",
-    "@polkadot/extension-dapp": "^0.37.3-17",
-    "@polkadot/extension-inject": "^0.37.3-17",
-    "@polkadot/types": "^4.7.2",
-    "@polkadot/ui-keyring": "^0.79.1",
-    "@polkadot/util": "^6.3.1",
-    "@polkadot/util-crypto": "^6.3.1",
+    "@polkadot/extension-dapp": "^0.38.6",
+    "@polkadot/extension-inject": "^0.38.6",
+    "@polkadot/types": "^4.15.1",
+    "@polkadot/ui-keyring": "^0.81.1",
+    "@polkadot/util": "^6.9.1",
+    "@polkadot/util-crypto": "^6.9.1",
     "@sentry/react": "^6.5.1",
     "@sentry/tracing": "^6.5.1",
     "@types/echarts": "^4.9.6",
