--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 GATSBY_BACKEND_ENDPOINT=https://crowdloan-api.phala.network
-GATSBY_POLKADOT_ENDPOINT=wss://kusama-rpc.polkadot.io
+GATSBY_POLKADOT_ENDPOINT=wss://kusama-rpc.polkadot.io/ws
 GATSBY_CAMPAIGN_ID=1
