--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
     "@ethersproject/providers": "^5.1.0",
     "@geist-ui/react": "^2.1.3",
     "@geist-ui/react-icons": "^1.0.1",
-    "@polkadot/api": "^4.15.1",
+    "@polkadot/api": "^4.17.1",
     "@polkadot/apps-config": "^0.89.1",
-    "@polkadot/extension-dapp": "^0.38.6",
-    "@polkadot/extension-inject": "^0.38.6",
-    "@polkadot/types": "^4.15.1",
-    "@polkadot/ui-keyring": "^0.81.1",
-    "@polkadot/util": "^6.9.1",
-    "@polkadot/util-crypto": "^6.9.1",
+    "@polkadot/extension-dapp": "^0.38.8",
+    "@polkadot/extension-inject": "^0.38.8",
+    "@polkadot/keyring": "^6.11.1",
+    "@polkadot/networks": "^6.11.1",
+    "@polkadot/types": "^4.17.1",
+    "@polkadot/ui-keyring": "^0.83.1",
+    "@polkadot/ui-settings": "^0.83.1",
+    "@polkadot/util": "^6.11.1",
+    "@polkadot/util-crypto": "^6.11.1",
     "@sentry/react": "^6.5.1",
     "@sentry/tracing": "^6.5.1",
     "@types/echarts": "^4.9.6",
