--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "@ethersproject/providers": "^5.1.0",
     "@geist-ui/react": "^2.1.3",
     "@geist-ui/react-icons": "^1.0.1",
-    "@polkadot/api": "^4.17.1",
-    "@polkadot/apps-config": "^0.89.1",
+    "@phala/typedefs": "^0.2.29",
+    "@polkadot/api": "4.17.2-20",
+    "@polkadot/apps-config": "^0.98.1",
     "@polkadot/extension-dapp": "^0.38.8",
     "@polkadot/extension-inject": "^0.38.8",
     "@polkadot/keyring": "^6.11.1",
-    "@polkadot/networks": "^6.11.1",
     "@polkadot/types": "^4.17.1",
     "@polkadot/ui-keyring": "^0.83.1",
     "@polkadot/ui-settings": "^0.83.1",
